[MOD] Modified price plan

--- a/price.html
+++ b/price.html
@@ -8,9 +8,10 @@
 <body>
     <h1>Price Page</h1>
     <ol>
-        <li>Lorem ipsum <b>Free</b></li>
-        <li>Lorem ipsum <b>$5</b></li>
-        <li>Lorem dolor <b>$15</b></li>
+        <li>Free Acount <b>Free</b></li>
+        <li>Basic Pack <b>$5</b></li>
+        <li>Pro Pack <b>$10</b></li>
+        <li>Custom Pack <b><a href="">contact</a></b></li>
     </ol>
 </body>
 </html>
