[FIX] Fixed submit button issue

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
         <input type="email" name="email" placeholder="Email">
         <input type="text" name="subject" placeholder="Subject">
         <input type="text" name="message" placeholder="Message">
+        <button type="submit">Sumbit</button>
     </form>
 </body>
 </html>
